# indiefuture_token_balance_agent

./: .env.template  Cargo.toml  Dockerfile  LICENSE  README.md 
actions/: example_actions.json  outer_actions.json
public/: agent_manifest.json
src/: app_state.rs  lib.rs  terminal.rs  webserver.rs
src/ai/: action_set.rs  ai_engine.rs  mod.rs
src/config/: tokens.json
src/controllers/: mod.rs  web_controller.rs  webhook_controller.rs
src/db/postgres/: mod.rs
src/db/postgres/domains/: eth_address.rs
src/db/postgres/migrations/: 0100_create_wallets.up.sql
src/db/postgres/scripts/: migrate.rs  rollback_full.rs
src/public/: index.html
src/tools/: evm_tools.rs  mod.rs  mpc_tool.rs
src/types/: evm_types.rs  indiefuture_types.rs  mod.rs  openai_completion.rs  selected_record.rs
src/types/domains/: bytes.rs  bytes32.rs  datetime.rs  decimal.rs  eth_address.rs  mod.rs  uint256.rs
src/util/: backend_server_error.rs  header_map_preset.rs  http_request.rs  json_extract.rs  mod.rs  oauth.rs  openai.rs  request.rs
