[package]
name = "indiefuture_template_agent"
version = "0.2.0"
edition = "2021"
default-run="webserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ethers = "2.0.10"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
 

tokio-postgres-migration = "0.1.0"
tokio-postgres = { version = "0.7.8" ,  features=["with-chrono-0_4"] } 
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-multipart = "0.6.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
env_logger = "0.10.0"
log = "0.4.18"


inquire = "0.6.2"
chrono =   { version = "0.4.31", features = ["serde"] }
hex = "0.4.3"
bytes = "1.5.0"
ethabi = "18.0.0"
  


 futures = "0.3.31"


 # vibegraph = "0.3.19"

 degen-sql = "0.1.16"
 
#oauth2 = "4.4.2"
base64 = "0.21.4"
dotenvy = "0.15"
url = "2.4.1"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4","fast-rng"] }
rust_decimal = { version = "1.36", features = ["db-tokio-postgres","maths"] }  
async-trait = "0.1.86"
dialoguer = "0.11.0"
crossterm = "0.28.1"
ctrlc = "3.4.5"
#actix-web-middleware-slack = "0.1.0"
serde_test = "1.0.177"
 
 
   
 

# cargo run --bin migrate
[[bin]]
name = "migrate"
path = "src/db/postgres/scripts/migrate.rs"

[[bin]]
name = "rollback_full"
path = "src/db/postgres/scripts/rollback_full.rs"

 

   
 
 
[[bin]]
name = "webserver"
path = "src/webserver.rs"

 

 
[[bin]]
name = "tui"
path = "src/terminal.rs"
